src/test/deca/context/invalid/class/undefined_method2.deca
// Description:
//    object call with a wrong method name 
//
// Result:
//    UNDEFINED_METHOD: Method g is undefined
//    line 19

class A {
    protected int x;

    void f(int y) {
        x = y;
    }
}

{
    A a = new A();
    int y = 2;
    a.g(y);
}